# clawd-admin

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Clawd.desktop  Dockerfile  EVOLUTION.md  OVERNIGHT.md  PLAN-agi-roadmap.md  PLAN-llama-cpp-migration.md  PLAN-phase1-task-planner.md  README.md  SETUP-REMOTE-CLAUDE-CODE.md  architecture.md  bench-ollama-accuracy.mjs  bench.mjs  docker-compose.yml  get-google-token.js  next-steps.md  package-lock.json  package.json  tsconfig.json  version.json
clawd-console/: package-lock.json  package.json
clawd-dashboard/: Cargo.toml  README.md  deploy.sh
clawd-dashboard/src/: api.rs  audio.rs  main.rs  models.rs  state.rs  voice_overlay.rs
clawdbot-instructions/: .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  package-lock.json  package.json
data/: dev-journal.jsonl  group-registry.json  learned-eval-labels.json  learned-rules.json  lquorum-knowledge.json  projects.json  system-knowledge.json
docs/: api-reference.md  archived-decisions.md  data-flows.md  deployment.md  evo-x2-reference.md  ollama-benchmark-2026-03-14.md  refactoring-vibed-codebases.md
eval/: forge-smoke.js  needsplan-eval.js  router-eval.js
evo-evolve/: evo-evolve.service  evo-evolve.timer  run-evolution.sh
evo-hooks/: scope-guard.sh
evo-memory/: dream_mode.py
evo-overnight/: overnight-coder.py
evo-system/: gpu-clock-pin.service  llama-server-coder.service  llama-swap-coder.service  llama-swap-coder.sh  llama-swap-coder.timer  llama-swap-main.service  llama-swap-main.sh  llama-swap-main.timer
evo-voice/: clawdbot-dream.service  (+15 more)
(+236 files in other folders)
