[package]
name = "clawd-dashboard"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.30"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
rodio = "0.19"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
